// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Start snapshot renders correctly 1`] = `
Array [
  <h1>
    Start your fostering journey
  </h1>,
  <ol
    className="task-item-list"
  >
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Contact the fostering team
          </h2>
        </div>
        <p>
          Contact the fostering team to tell us that you’re interested in becoming a foster carer.
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Find out more about fostering
          </h2>
        </div>
        <p>
          Speak to the fostering team about your interest in fostering and arrange a home visit.
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Answer questions before your home visit
          </h2>
        </div>
        <p>
          You can answer the questions in this section to help you to prepare for your home visit. This step is optional however, your fostering journey can be made simpler by telling us more about yourself. You can make changes to your answers up to 30 minutes before your home visit and your social worker will be able to see your answers before your appointment.
        </p>
        <div
          className="anchor-with-status"
        >
          <p>
            More about you
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your employment details
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Languages spoken in your home
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your partnership status
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your fostering history
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your health
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your interest in fostering
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your household
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Children living away from your home
          </p>
        </div>
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <h2>
            Home visit
          </h2>
        </div>
        <p>
          Your social worker will come to your home to find out more about you and your reasons for wanting to become a foster carer. If you’ve answered the questions in section 3, you’ll talk more about them. 
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <h2>
            Additional information
          </h2>
        </div>
        <p>
          After your home visit, you must give us more information so that we can carry out personal checks and contact your referees.
        </p>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/address-history"
            onClick={[Function]}
          >
            Your address history
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/about-your-gp"
            onClick={[Function]}
          >
            Your GP details
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/family-reference"
            onClick={[Function]}
          >
            Personal references
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/relationship-to-council-employees"
            onClick={[Function]}
          >
            Local councillors and council employees
          </a>
        </div>
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <h2>
            Next steps
          </h2>
        </div>
        <p>
          The fostering team will use the information that you’ve provided to carry out statutory checks and request personal and health references from your referees and GP.
        </p>
        <p>
          You’ll complete the assessment stage of your fostering journey where you’ll:
        </p>
        <ul>
          <li>
            attend training sessions, including the Skills to Foster course to help prepare you for becoming a foster carer
          </li>
          <li>
            have more meetings with your social worker so that they can find out more about you and your reasons for wanting to become a foster carer
          </li>
          <li>
            get to know current foster carers and other people who are starting their fostering journey
          </li>
        </ul>
        <p>
          You’ll then go to panel where a decision will be made about whether you can become a foster carer.
        </p>
      </div>
    </li>
  </ol>,
]
`;

exports[`Start snapshot renders correctly with home visit date 1`] = `
Array [
  <h1>
    Start your fostering journey
  </h1>,
  <ol
    className="task-item-list"
  >
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Contact the fostering team
          </h2>
        </div>
        <p>
          Contact the fostering team to tell us that you’re interested in becoming a foster carer.
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Find out more about fostering
          </h2>
        </div>
        <p>
          Speak to the fostering team about your interest in fostering and arrange a home visit.
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Answer questions before your home visit
          </h2>
        </div>
        <p>
          You can answer the questions in this section to help you to prepare for your home visit. This step is optional however, your fostering journey can be made simpler by telling us more about yourself. You can make changes to your answers up to 30 minutes before your home visit and your social worker will be able to see your answers before your appointment.
        </p>
        <div
          className="anchor-with-status"
        >
          <p>
            More about you
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your employment details
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Languages spoken in your home
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your partnership status
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your fostering history
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your health
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your interest in fostering
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your household
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Children living away from your home
          </p>
        </div>
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <h2>
            Home visit
          </h2>
        </div>
        <p>
          Your home visit appointment will be on
          <strong>
             
            25/07/2190
          </strong>
           at 
          <strong>
            13:10
          </strong>
        </p>
        <p>
          Your social worker will come to your home to find out more about you and your reasons for wanting to become a foster carer. If you’ve answered the questions in section 3, you’ll talk more about them. 
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <h2>
            Additional information
          </h2>
        </div>
        <p>
          After your home visit, you must give us more information so that we can carry out personal checks and contact your referees.
        </p>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/address-history"
            onClick={[Function]}
          >
            Your address history
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/about-your-gp"
            onClick={[Function]}
          >
            Your GP details
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/family-reference"
            onClick={[Function]}
          >
            Personal references
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/relationship-to-council-employees"
            onClick={[Function]}
          >
            Local councillors and council employees
          </a>
        </div>
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div>
          <h2>
            Next steps
          </h2>
        </div>
        <p>
          The fostering team will use the information that you’ve provided to carry out statutory checks and request personal and health references from your referees and GP.
        </p>
        <p>
          You’ll complete the assessment stage of your fostering journey where you’ll:
        </p>
        <ul>
          <li>
            attend training sessions, including the Skills to Foster course to help prepare you for becoming a foster carer
          </li>
          <li>
            have more meetings with your social worker so that they can find out more about you and your reasons for wanting to become a foster carer
          </li>
          <li>
            get to know current foster carers and other people who are starting their fostering journey
          </li>
        </ul>
        <p>
          You’ll then go to panel where a decision will be made about whether you can become a foster carer.
        </p>
      </div>
    </li>
  </ol>,
]
`;
